fix: card overflow

--- a/src/Card/card.scss
+++ b/src/Card/card.scss
@@ -94,6 +94,5 @@
 }
 
 .card-body {
-  overflow: hidden;
   padding: 24px 0;
 }
